--- a/body.html
+++ b/body.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <link rel="stylesheet" href="styles.css" />
-</head>
+<head>
+<style>
+h1 {
+text-align: center;
+}
+#myInput {
+  background-image: url('img.png');
+  background-size: 30px 30px;
+  background-position: 9px 6px;
+  background-repeat: no-repeat;
+  width: 60%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 1px solid #ddd;
+  margin-bottom: 12px;
+}
 
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  background-color: #f1f1f1;
+  padding: 5px;
+
+}
+
+</style>
+</head>
 <body>
 
 <h1>Campaign listing page</h1>
@@ -34,90 +55,8 @@
 	<td>VURBO</td>
   </tr>
 </table>
-<div id="pageNavPosition" style="padding-top: 20px" align="center">
-</div>
-<input type=button value="Delete Rows" onclick="deleteRows()">
+
 <script type="text/javascript">
-
-var pager = new Pager('dataTbl', 1);
-pager.init();
-pager.showPageNav('pager', 'pageNavPosition');
-pager.showPage(1);
-
-
- function Pager(tableName, itemsPerPage) {
-	this.tableName = tableName;
-	this.itemsPerPage = itemsPerPage;
-	this.currentPage = 1;
-	this.pages = 0;
-	this.inited = false;
-	this.showRecords = function(from, to) {
-
-	var rows = document.getElementById(tableName).rows;
-	for (var i = 1; i < rows.length; i++) {
-		if (i < from || i > to)
-			rows[i].style.display = 'none';
-		else
-			rows[i].style.display = '';
-	}
-	}
-
-	this.showPage = function(pageNumber) {
-	if (! this.inited) {
-	alert("not inited");
-	return;
-	}
-
-	var oldPageAnchor = document.getElementById('pg'+this.currentPage);
-	oldPageAnchor.className = 'pg-normal';
-	this.currentPage = pageNumber;
-	var newPageAnchor = document.getElementById('pg'+this.currentPage);
-	newPageAnchor.className = 'pg-selected';
-	var from = (pageNumber - 1) * itemsPerPage + 1;
-	var to = from + itemsPerPage - 1;
-	this.showRecords(from, to);
-	}
-
-	this.prev = function() {
-	if (this.currentPage > 1)
-	this.showPage(this.currentPage - 1);
-	}
-
-	this.next = function() {
-	if (this.currentPage < this.pages) {
-	this.showPage(this.currentPage + 1);
-	}
-
-	}
-
-	this.init = function() {
-	var rows = document.getElementById(tableName).rows;
-	var records = (rows.length - 1);
-	this.pages = Math.ceil(records / itemsPerPage);
-	this.inited = true;
-	}
-
-	this.showPageNav = function(pagerName, positionId) {
-	if (! this.inited) {
-	alert("not inited");
-	return;
-
-	}
-
-	var element = document.getElementById(positionId);
-	var pagerHtml = '<span onclick="' + pagerName + '.prev();" class="pg-normal style="margin:5px;"> « Prev </span> ';
-
-for (var page = 1; page <= this.pages; page++)
-
-pagerHtml += '<span id="pg' + page + '" class="pg-normal" onclick="' + pagerName + '.showPage(' + page + ');">' + page + '</span> ';
-
-pagerHtml += '<span onclick="'+pagerName+'.next();" class="pg-normal"> Next »</span>';
-	element.innerHTML = pagerHtml;
-
-	
-	}
-
-}
  
 function searchFunction(){
     var input, filter, found, table, tr, td, i, j;
@@ -145,12 +84,11 @@ function deleteRows(){
 	isTable = document.getElementById('dataTbl');
 	nBoxes = document.getElementsByName('delBox');
 	for (i=nBoxes.length-1; i>=0; i--)
-		{if (nBoxes[i].checked == true){isTable.deleteRow(i)}}
+		{if (nBoxes[i].checked == true){isTable.deleteRow(i+1)}}
 }
 
- 
-
-</script>
+     
+    </script>
+<input type=button value="Delete Rows" onclick="deleteRows()">
 </body>
-
 </html>
