Dynamic Table Creation

--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,8 @@
 	<th>Company</th>
 	
   </tr>
-  <tr>
-    <td><input type=checkbox name='delBox'>
-    <td><div id="name"></div></td>
-	<td><div id="type"></div></td>
-	<td><div id="company"></div></td>
-	
-  </tr>
+	<div id="tablespace"></div>
+   
 </table>
 
 <button style="font-size:24px" onclick="deleteRows()"><i class="fa fa-trash-o"></i></button>
