Dynamic row and cell creation

--- a/public/index.html
+++ b/public/index.html
@@ -12,19 +12,9 @@
 <h1>Campaign listing page</h1>
 <input type="search" id="myInput" onkeyup="searchFunction()" placeholder="Search for names.." >
 
-<table id="dataTbl" width=100%>
-  <tr>
-    <!--<th><input type="checkbox" name="delall"></th>-->
-	<th></th>
-    <th>Campaign Name</th>
-	<th>Type</th>
-	<th>Company</th>
-	
-  </tr>
-	<div id="tablespace"></div>
-   
-</table>
 
+
+<div id="tbl" ></div>
 <button style="font-size:24px" onclick="deleteRows()"><i class="fa fa-trash-o"></i></button>
 
 <div id="pageNavPosition" style="padding-top: 20px" align="center">
